--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "mysql2": "^2.1.0",
     "next": "9.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "sequelize": "^5.21.5"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.5.1"
   }
 }
