--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "mysql2": "^2.1.0",
-    "next": "9.3.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "next": "^9.3.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "reactstrap": "^8.4.1",
     "sequelize": "^5.21.5"
   },
