--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "mysql2": "^2.1.0",
     "next": "^9.3.1",
