--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
-    "next": "^9.3.1",
+    "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "reactstrap": "^8.4.1",
