--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "next": "^9.3.4",
