--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^2.1.0",
     "next": "^9.3.4",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^16.13.1",
     "reactstrap": "^8.4.1",
     "sequelize": "^5.21.5"
