--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@material-ui/core": "^4.9.9",
+    "@material-ui/core": "^4.9.11",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
-    "next": "^9.3.4",
+    "next": "^9.3.5",
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "reactstrap": "^8.4.1",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.7"
   },
   "devDependencies": {
     "sequelize-cli": "^5.5.1"
