--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-vis": "^1.11.7",
     "reactstrap": "^8.4.1",
     "sequelize": "^5.21.7"
   },
